# blinko-snap

./: .gitignore  DEV.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src/components/AttachmentRender/: FileIcon.tsx  icons.tsx  imageRender.tsx  index.tsx
src/components/Common/ScrollArea/: index.tsx
src/components/Common/TipsDialog/: index.tsx
src/components/Editor/: editorStore.tsx  editorUtils.tsx  index.tsx  type.ts  vditor.css
src/components/Editor/Toolbar/HashtagButton/: index.tsx
src/components/Editor/Toolbar/NoteTypeButton/: index.tsx
src/components/Editor/Toolbar/SendButton/: index.tsx
src/components/Editor/Toolbar/UploadButtons/: index.tsx
src/components/Editor/Toolbar/ViewModeButton/: index.tsx
src/components/Editor/hooks/: useEditor.ts
src/i18n/locales/: en.json  zh.json
src/lib/: api.ts  event.ts  helper.ts  i18n.ts  sql.ts  tray.ts
src/pages/: Home.tsx  Settings.tsx
src/store/: baseStore.ts  blinkoSnapStore.ts  blinkoStore.tsx  root.ts
src/store/module/Dialog/: index.tsx
src/store/module/Toast/: Toast.tsx
src/store/standard/: PromiseState.ts
src/styles/: globals.css
